-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
the HSM parameter hsm_control can be stored in config log to be set during mount process. Meanwhile if corresponding HSM state cannot be set, e.g. transition like stopped->disabled then it returns error and whole mount fails. Possible solution could be to report error about wrong state change but don't return error to don't affect mount process